--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Apache::AliasList.
 
+0.07 - 09 February 2004
+  Fixed bug which prevented DirectoryIndex directives from
+  being processed
+
 0.06 - 08 February 2004
   First public release
  
