--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Apache::AliasList.
 
+0.08 - 06 March 2004
+  Fixed bug in regex, documentation update
+
 0.07 - 09 February 2004
   Fixed bug which prevented DirectoryIndex directives from
   being processed
